--- a/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
@@ -92,8 +92,7 @@
     <div class="row">
         <div class="col-md-6">
             <a role="button" data-toggle="collapse" href="#current_status_collapse{{ form.instance.id }}"
-               aria-expanded="false" aria-controls="current_status_collapse{{ form.instance.id }}"><i
-                    class="fa fa-plus-square-o"></i></a>
+               aria-expanded="false" aria-controls="current_status_collapse{{ form.instance.id }}"><i class="fa fa-plus-square-o"></i></a>
             {{ form.instance.report.get_final_expert_status_bootstrap | safe }}
             <!--<strong>Current Status <i>Albopictus</i>:</strong>  {% include "tigacrafting/score_label.html" with score=form.instance.report.get_final_expert_score text=form.instance.report.get_final_expert_category %}
             <strong>Current Status <i>Aegypti</i>:</strong> {% include "tigacrafting/score_label.html" with score=form.instance.report.get_final_expert_score_aegypti text=form.instance.report.get_final_expert_category_aegypti %}-->
