--- a/tigacrafting/templates/tigacrafting/photo_grid.html
+++ b/tigacrafting/templates/tigacrafting/photo_grid.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href={% static "tigacrafting/tigacrafting_style.css" %}>
     <style>
         .grid-item { background-color: grey; height: 120px; width: 120px; float: left; margin-top: 5px;margin-bottom: 5px;}
-        .grid-item-large { background-color: grey; height: 180px; width: 380px; float: left; margin-top: 5px;margin-bottom: 5px; overflow:auto}
+        .grid-item-large { background-color: grey; height: 180px; width: 380px; float: left; margin-top: 5px;margin-bottom: 5px; overflow:auto; padding: 10px 10px 10px 10px;}
         .grid { /*border-style:solid; border-width: 1px;*/ background-color: lightgray; margin-top: 10px; margin-bottom: 10px;}
         .frame {position: absolute;margin: auto;top: 0;left: 0;right: 0;bottom: 0;}
         .p-small { font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; font-size: 12px; color: #fff;}
         .site { background-color: #4169E1; }
+        .adult { background-color: orange; }
     </style>
     <script src={% static "tigacrafting/jquery/1.11.1/jquery.min.js" %}></script>
     <script src={% static "tigacrafting/jquery-ui/jquery-ui.min.js" %}></script>
@@ -158,7 +159,7 @@
     {% csrf_token %}
     {{ formset.management_form }}
     {% for form in formset %}
-        <div class="grid">
+        <div class="grid {{form.instance.type}}">
             {% for photo in form.instance.photos.all %}
                 {% if forloop.first %}
                     <div class="grid-item-large valid {{form.instance.type}}">
@@ -172,11 +173,13 @@
                         {% endfor %}
                     </div>
                 {% endif %}
+                {% if photo.hide == False %}
                 <div class="grid-item valid">
                     <a href="/media/{{ photo.photo }}" target="_blank">
                         <img class="frame" src="{{ photo.get_small_url }}">
                     </a>
                 </div>
+                {% endif %}
             {% endfor %}
         </div>
     {% endfor %}
